--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,519 @@
-.App {
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 10px; 
+  
+}
+
+::-webkit-scrollbar-track {
+  background: #021227; 
+  border-radius: 10px; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: #0ef; 
+  border-radius: 10px; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+
+/* .seapration {
+  height: 3px;
+  background-color: rgb(100, 98, 98);
+  position: relative;
+  z-index: 20;
+  margin-top: 30px;
+} */
+
+
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'poppins', sans-serif;
+}
+
+body {
+  color: #ededed;
+  /* background: #021227; */
+  background-image: repeating-linear-gradient(0deg, rgba(255,255,255, 0.07) 0px, rgba(255,255,255, 0.07) 1px,transparent 1px, transparent 26px),repeating-linear-gradient(90deg, rgba(255,255,255, 0.07) 0px, rgba(255,255,255, 0.07) 1px,transparent 1px, transparent 26px),linear-gradient(90deg, hsl(219,97%,17%),hsl(219,97%,17%));
+
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+
+.logo {
+  position: relative;
+  font-size: 25px;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+  cursor: default;
+  opacity: 0;
+  animation: slideRight 1s ease forwards;
+}
+
+.navbar {
+  background-color:rgba(101, 98, 98, 0.416);
+  display: inline-block;
+  padding: 10px 22px 10px 0;
+  border-radius: 50px;  
+}
+
+.navbar a {
+  display: inline-block;
+  font-size: 25px;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 35px;
+  transition: .3s;
+  opacity: 0;
+  cursor: pointer;
+  animation: slideTop .5s ease forwards;
+  animation-delay: calc(.2s * var(--i));
+}
+
+
+
+/* .about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 1.5rem;
+} */
+
+/* .about-img img {
+  padding-bottom: 20%;
+  padding-top: 25%;
+
+  max-width: 755px;
+  height: auto;
+  width: 100%;
+  border-radius: 8px;
+} */
+
+/* .about-te
+ */
+
+/* .about-text h4 {
+  font-size: 29px;
+  font-weight: 600;
+  color: #fff;
+  line-height: 1.7;
+  margin: 15px 0 30px;   
+}
+
+
+.about-text p {
+  color: aliceblue;          
+  font-size: 20px;           
+  line-height: 1.6;          
+  margin-bottom: 1.5rem;     
+  text-align: justify;       
+}
+
+.about-text {
+  margin-right: 11px;    
+} */
+
+/* #services {
+  color: #ffee10;
+  font-size: 24px;
+  line-height: 1.4;
+  margin-bottom: 4rem;
+} */
+
+.sub-title {
   text-align: center;
+  font-size: 60px;
+  padding-bottom: 70px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  padding: 90px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sub-title span {
+  color: #0ef;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* .services-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
+  grid-gap: 40px;
+  margin-top: 26px;
+} */
+
+/* .services-list div {
+  background-color:transparent;
+  padding: 40px;
+  font-size: 13px;
+  border-right: 10px;
+  border-radius: 20px;
+  transition: background 0.5s, transform 0.5s;
+  box-shadow: 1px 1px 20px #eae056d2,1px 1px 40px #012290f7 ;
+} */
+
+
+
+/* .services-list div i {
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+
+.services-list div h2 {
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 15px;
+} */
+
+/* .services-list div i {
+  text-decoration: none;
+  color:#000000;
+  font-size: 40px;
+  margin-top: 20px;
+  display: inline-block;
+}
+
+.services-list div p {
+  text-align: justify;
+  line-height: 1.5;
+} */
+
+/* .read {
+  display: inline-block;
+  padding: 12px 28px;
+  background: #ffee10;
+  border-radius: 40px;
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  text-decoration: none;
+  opacity: 0;
+  animation: slideTop 1s ease forwards;
+  animation-delay: 0.5s;
+  box-shadow: 0 0 5px #ffee10,
+      0 0 25px #ffee10
+
+}
+
+.read:hover{
+  box-shadow: 0 0 5px #ffee10, 0 0 25px #ffee10, 0 0 50px #ffee10,
+  0 0 100px #ffee10, 0 0 200px #ffee10
+} */
+
+/* .services-list div:hover{
+  transform: translateY(-10px);
+  cursor: pointer;
+} */
+
+.skil-main{
+  display: flex;
+  /* flex-wrap: wrap; */
+  flex-direction: column;
+
+}
+
+.icons {
+  max-width: 400px; 
+  margin: 0 auto; 
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  justify-content: center; 
+  grid-gap: 20px; 
+}
+
+.icons i {
+  font-size: 150px; 
+  margin: 10px;
+}
+
+.main-text{
+  padding-top: 90px;
+  margin-top: 200px;
+  
+} 
+
+.main-text h2 {
+  
+  font-size: 60px;
+  line-height: 1;
+  text-align: center;
+  
+} 
+
+ .main-text h2 span {
+  color: #0ef;
+} 
+
+.portfolio-content {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(359px,auto));
+}
+
+
+
+.row img {
+  padding-top: 50px;
+  width: 100%;
+  border-radius: 8px;
+  display: block;
+  transition: transform 0.5s;
+  flex-direction: column;
+  
+}
+
+.main-text {
+  padding-top: 130px;
+  margin-top: 55px;
+}
+
+.main-text h2 {
+  padding-top: 20px;
+  margin-top: 20px;
+  font-size: 60px;
+  line-height: 1;
+  text-align: center;
+  justify-content: center;
+  /* padding-left: 630px; */
+}
+
+.main-text h2 span {
+  color: #0ef;
+}   
+
+.portfolio-content {
+ 
+  column-gap: 80px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(359px,auto));
+}
+
+.row {
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+
+
+.layer {
+  width: 100%;
+  height: 0;
+  background: linear-gradient(rgba(0,0,0,0.1),rgb(36, 218, 36));
+  position: absolute;
+  border-radius: 8px;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  padding: 0 40px;
+  transition: height 0.5s;
 }
 
-.App-link {
-  color: #61dafb;
+.layer h5 {
+  color: rgb(38, 11, 118);
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.layer p {
+  color: #fff;
+  font-size: 1rem;
+  line-height: 1.8;
+  /* text-align: justify; */
+  
+}
+
+.layer i {
+  color: #0ef;
+  margin-top: 20px;
+  font-size: 20px;
+  background: #fff;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.row:hover img {
+  transform: scale(1.1);
+}
+
+.row:hover .layer {
+  height: 100%;
+}
+
+.contact {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-items: center;
+  gap: 3rem;
+  padding-left: 30px;
+  margin-top: 130px;
+}
+
+.contact h2 {
+  font-size: 60px;
+  line-height: 1;
+  text-align: center;
+}
+
+.contact h2 span {
+  color: #0ef;
+  
+  margin-bottom: 600px;
+
+}
+
+.contact-list {
+  margin-bottom: 3rem;
+  align-items: center;
+}
+
+.contact-list li {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.contact-list i {
+
+  margin-bottom: 10px;
+  display: block;
+  
+}
+
+.contact-list i {
+  display: inline-block;
+  color: #e8e0e0;
+  font-size: 20px;
+  font-weight: 600;
+  transition: all .40s ease;
+  cursor: pointer;
+  
+}
+
+.contact-list li a:hover {
+  transform: scale(1.01) translateY(-5px);
+  color: #0ef;
+}
+
+.contact-icons i {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: transparent;
+  border: 2px solid #0ef;
+  border-radius: 50%;
+  font-size: 20px;
+  color: #0ef;
+  text-decoration: none;
+  margin: 25px 10px 20px 0;
+  transition: .5s ease;
+  opacity: 0;
+  animation: slideLeft 1s ease forwards;
+  animation-delay: calc(.2s * var(--1));
+}
+
+.contact-icons i:hover {
+  color: #0ef;
+  background: #333;
+  box-shadow: 0 0 15px #0ef;
+}
+
+.pro-img{
+  height: 350px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@keyframes slideRight {
+  0% {
+      transform: translateX(-100px);
+      opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+
+  100% {
+      transform: translateX(0px);
+      opacity: 1;
   }
 }
+
+@keyframes slideLeft {
+  0% {
+      transform: translateX(100px);
+      opacity: 0;
+  }
+
+  100% {
+      transform: translateX(0px);
+      opacity: 1;
+  }
+}
+
+
+@keyframes slideTop {
+  0% {
+      transform: translateY(100px);
+      opacity: 0;
+  }
+
+  100% {
+      transform: translateY(0px);
+      opacity: 1;
+  }
+}
+
+
